# apps/api/src/modules/ExperienceBooking/experienceBooking.service.ts
@@ -1,7 +1,8 @@
 import { log } from '@repo/logger';
-import { Experience, ExperienceBooking, ExperiencePrice } from '@repo/db';
-// import { stripeService } from '@repo/stripe';
-import { IExperienceParams, IExperienceBody, IBookExperienceParams } from './experienceBooking.types';
+import { constants } from '@repo/config';
+import { stripeService } from '@repo/stripe';
+import { Experience, ExperienceBooking, ExperiencePrice, ExperienceTransaction } from '@repo/db';
+import { IExperienceParams, IExperienceBody, IBookExperienceParams, IBookExperienceResponse } from './experienceBooking.types';
 import { IUser } from '../User/Profile/profile.types';
 import { IExperienceQuery } from './experienceBooking.types';
 
@@ -54,14 +55,15 @@ const listBookingExperienceService = async (user: IUser, query: IExperienceQuery
     }
 };
 
-const bookExperienceService = async (user: IUser, params: IBookExperienceParams, body: IExperienceBody): Promise<ExperienceBooking> => {
+const bookExperienceService = async (user: IUser, params: IBookExperienceParams, body: IExperienceBody): Promise<IBookExperienceResponse> => {
+    const trx = await ExperienceBooking.startTransaction();
     try {
         const { experience_id } = params;
         const { experience_price_id, guest_count: guests, total_price, service_fee, total_amount } = body;
 
         const experiencePrice = await ExperiencePrice
             .query()
-            .select('id')
+            .select('id', 'currency')
             .findOne({
                 id: experience_price_id,
                 experience_id
@@ -77,7 +79,7 @@ const bookExperienceService = async (user: IUser, params: IBookExperienceParams,
         if (!experienceData) throw new Error('Experience not found');
 
         const experienceBooking = await ExperienceBooking
-            .query()
+            .query(trx)
             .insert({
                 user_id: user.id,
                 experience_id,
@@ -88,9 +90,96 @@ const bookExperienceService = async (user: IUser, params: IBookExperienceParams,
                 total_amount
             });
 
-        return experienceBooking;
+        const paymentIntent = await stripeService.createPaymentIntent(constants.stripeSupportedCurrencyTypeNumberToName[experiencePrice.currency], total_amount, 'cus_RxoyRNl8sf1aaR');
+
+        await ExperienceTransaction
+            .query(trx)
+            .insert({
+                user_id: user.id,
+                experience_booking_id: experienceBooking.id,
+                stripe_payment_intent_id: paymentIntent.id,
+                currency: experiencePrice.currency,
+                amount: total_amount,
+                payment_status: constants.paymentStatus['Pending']
+            });
+
+        await trx.commit();
+
+        return { payment_intent_id: paymentIntent.id, payment_intent_client_secret: paymentIntent.client_secret };
     } catch (error) {
+        await trx.rollback();
         log.error('bookExperienceService Catch: ', error);
+        throw error;
+    }
+};
+
+const bookingExperiencePaymentVerificationWebhookService = async (request: any): Promise<boolean> => {
+    const trx = await ExperienceBooking.startTransaction();
+    try {
+        const stripeSignature = request?.headers['stripe-signature'];
+        let event: any = null;
+
+        try {
+            event = stripeService.verifyWebhookRequest(stripeSignature, request);
+        }
+        catch (err) {
+            await trx.rollback();
+            throw new Error('Bad Request');
+        }
+
+        const transaction = await ExperienceTransaction
+            .query()
+            .where('stripe_payment_intent_id', event.data.object.payment_intent)
+            .andWhereNot('payment_status', constants.paymentStatus['Completed'])
+            .orderBy('created_at', 'desc')
+            .first();
+
+        if (!transaction) {
+            await trx.rollback();
+            if (event?.data?.object?.invoice) return true;
+            throw new Error("Booking not found");
+        }
+
+        if (transaction.payment_status === +constants.paymentStatus['Completed']) {
+            await trx.commit();
+            return true;
+        }
+
+        if (event.type === 'charge.failed') {
+
+            await transaction.$query(trx).patch({
+                payment_status: constants.paymentStatus['Failed'],
+                stripe_response: JSON.stringify(event),
+            })
+                .where('id', transaction.id);
+
+            await ExperienceBooking
+                .query(trx)
+                .patch({ status: constants.experienceBookingStatus['Rejected'] })
+                .where({ id: transaction.experience_booking_id });
+
+            await trx.commit();
+            return true;
+        }
+
+        await transaction.$query(trx).patch({
+            stripe_payment_intent_id: event?.data?.object?.id || null,
+            stripe_invoice_url: '',
+            payment_status: constants.paymentStatus['Completed'],
+            stripe_response: JSON.stringify(event),
+        })
+            .where('id', transaction.id);
+
+        await ExperienceBooking
+            .query(trx)
+            .patch({ status: constants.experienceBookingStatus['Accepted'] })
+            .where({ id: transaction.experience_booking_id });
+
+        await trx.commit();
+        return true;
+    } catch (error) {
+        await trx.rollback();
+        log.error('paymentVerificationWebhookService Catch: ', error);
         throw error;
     }
 };
@@ -98,5 +187,6 @@ const bookExperienceService = async (user: IUser, params: IBookExperienceParams,
 export const experienceBookingService = {
     getBookingExperienceService,
     listBookingExperienceService,
-    bookExperienceService
+    bookExperienceService,
+    bookingExperiencePaymentVerificationWebhookService
 };
