# apps/api/src/modules/ExperienceBooking/experienceBooking.swagger.yaml
@@ -184,40 +184,19 @@ paths:
                   type: number
                   example: 110.0
       responses:
-        '200':
+        '201':
           description: Experience booked successfully
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: number
-                    example: 1
-                  user_id:
-                    type: number
-                    example: 1
-                  experience_id:
-                    type: number
-                    example: 1
-                  experience_price_id:
-                    type: number
-                    example: 1
-                  guests:
-                    type: number
-                    example: 1
-                  total_price:
-                    type: number
-                    example: 100.0
-                  service_fee:
-                    type: number
-                    example: 10.0
-                  total_amount:
-                    type: number
-                    example: 110.0
-                  status:
+                  payment_intent_id:
                     type: string
-                    example: Pending
+                    example: 'pi_3RIl4aSD0McdkBva1ZOxVJYB'
+                  payment_intent_client_secret:
+                    type: string
+                    example: 'pi_3RIl4aSD0McdkBva1ZOxVJYB_secret_EzhCXPDnjIXmWrTJMvIY0Mc81'
         '500':
           description: Internal server error
           content:
